--- a/docker/app/php/Dockerfile
+++ b/docker/app/php/Dockerfile
@@ -2,9 +2,19 @@
 FROM php:7
 
 RUN apt-get update
-RUN apt-get install --force-yes -y sudo unzip git mysql-client zlib1g-dev 
-RUN docker-php-ext-install pdo_mysql 
+RUN apt-get install --force-yes -y sudo unzip git mysql-client zlib1g-dev libmemcached-dev
+RUN docker-php-ext-install pdo_mysql
 
+# php-memcached
+RUN cd /usr/local/src && \
+  git clone -b php7 --depth 1 https://github.com/php-memcached-dev/php-memcached && \
+  cd php-memcached && phpize  && ./configure  && make  && make install
+# phpredis
+RUN cd /usr/local/src && \
+  git clone -b php7 --depth 1 https://github.com/phpredis/phpredis && \
+  cd phpredis && phpize  && ./configure  && make  && make install
+
+# composer
 ENV HASH e115a8dc7871f15d853148a7fbac7da27d6c0030b848d9b3dc09e2a0388afed865e6a3d6b3c0fad45c48e2b5fc1196ae
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
   php -r "if (hash_file('SHA384', 'composer-setup.php') === '${HASH}') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
@@ -30,4 +40,3 @@ ENV LANG C.UTF-8
 ADD my.cnf /etc/mysql/my.cnf
 
 WORKDIR /host
-
