--- a/docker/app/php/Dockerfile
+++ b/docker/app/php/Dockerfile
@@ -8,11 +8,13 @@ RUN docker-php-ext-install pdo_mysql
 # php-memcached
 RUN cd /usr/local/src && \
   git clone -b php7 --depth 1 https://github.com/php-memcached-dev/php-memcached && \
-  cd php-memcached && phpize  && ./configure  && make  && make install
+  cd php-memcached && phpize  && ./configure  && make  && make install && \
+  docker-php-ext-enable memcached
 # phpredis
 RUN cd /usr/local/src && \
   git clone -b php7 --depth 1 https://github.com/phpredis/phpredis && \
-  cd phpredis && phpize  && ./configure  && make  && make install
+  cd phpredis && phpize  && ./configure  && make  && make install && \
+  docker-php-ext-enable redis
 
 # composer
 ENV HASH e115a8dc7871f15d853148a7fbac7da27d6c0030b848d9b3dc09e2a0388afed865e6a3d6b3c0fad45c48e2b5fc1196ae
